# Flamed

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: set-version.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  audio.rs  error.rs  lol.rs  main.rs  secrets.rs  settings.rs  speech.rs
src/components/: DeathHistory.tsx  UpdateDialog.tsx
src/components/ui/: slider.tsx
src/lib/: tauri.ts  updater.ts
src/store/: useAppStore.ts
src/windows/: Overlay.tsx  Settings.tsx
