[package]
name = "flamed"
version = "1.0.5"
description = "Flamed is a league of legends overlay that bullys you"
authors = ["Flamed"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flamed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "flamed"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rodio = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3.6.3", features = ["windows-native"] }
genai = "0.5.3"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
